# oryx-live-center

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 002_add_transcode_tables.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  srs_client.py  stats_reconciler.py
backend/app/models/: __init__.py  base.py  transcode.py
backend/app/routers/: admin.py  auth.py  branding.py  chat.py  edge.py  hooks.py  streams.py  transcode.py  viewer.py
deploy/: srs-edge-setup.sh
deploy/nginx/: external.conf.example  nginx.conf
deploy/srs/: srs.conf
docs/: architecture.md  cdn.md  configuration.md  srs-edge.md  stats-architecture.md  transcode-deployment-windows.md  transcode-deployment.md  webrtc-cdn.md  webrtc.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/api/: transcode.ts
frontend/src/components/: AppLayout.tsx  ChatPanel.tsx  LivePlayer.tsx
frontend/src/pages/: AuthCallback.tsx  Home.tsx  LiveRoom.tsx  NotFound.tsx
frontend/src/store/: auth.tsx  branding.tsx
frontend/src/utils/: avatar.ts
mock-oauth/: Dockerfile  README.md  requirements.txt  server.py
transcode-node/: Dockerfile  config.yaml  docker-compose.yml  requirements.txt  supervisord.conf
transcode-node/app/: __init__.py  main.py  monitor.py  protocols.py  worker.py
transcode-node/scripts/: .gitkeep
(+15 files in other folders)
